before accepting intro revisions

--- a/sections/1_intro.tex
+++ b/sections/1_intro.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 Visual art creation is a complex, multistage process requiring significant time, effort and material investment. Recent advances and uses of generative AI show potential for supporting this intensive creation process through consistent, guided generation and editing \cite{zhang2023text} of increasingly realistic and detailed visual outputs \cite{podell2024sdxl}. 
-Such progress, coupled with lowered barriers of access, spark excitement around the potentials for visual generative models to revolutionize and democratize art education and expand creative participation \cite{paradox, democratize, edu}. 
+Such progress, coupled with lowered barriers of access, sparks excitement around the potential for visual generative models to revolutionize and democratize art education and expand creative participation \cite{paradox, democratize, edu}. 
 
 While many %A burgeoning body of 
 creativity support tools enabled by visual generative AI have explored ways to augment the workflows of professional artists and designers across various domains \cite{wang2025aideation, GenQuery, architectural}, 
