--- a/sections/4_interview_findings.tex
+++ b/sections/4_interview_findings.tex
@@ -139,7 +139,8 @@ Below, we present four key challenges: (1)
 Next, we follow-up with suggestions participants provided for ways to be supported in artmaking. 
 We conclude with considerations for potential tool development, including envisioned challenges and suggested methods for mitigating and preventing potential harms or misuses. 
 
-\subsubsection{Quicker and Better Access to References.} Participants frequently struggled to find reference images that match their creative intent, reporting current tools as frustratingly limited in surfacing relevant or high-quality material.
+\subsubsection{Quicker and Better Access to References.} \label{refs}
+Participants frequently struggled to find reference images that match their creative intent, reporting current tools as frustratingly limited in surfacing relevant or high-quality material.
 % context of current practices
 % Participants frequently gathered inspiration from real-life and digital resources (e.g., Google Images, Pinterest), yet some found existing tools frustratingly limited in surfacing relevant or high-quality reference materials. 
 Several participants regularly search references on Google Image Search (P1, 5, 12), Pinterest (P1, 2, 5, 9, 11, 13), and social media (P5, 7, 9, 11, 12, 13). P13 reflected how, as a novice artist \textit{``I have a hard time drawing from imagination, and so \dots I go on Pinterest and look up pictures''} (P13). 
@@ -169,14 +170,11 @@ To manage these gaps, participants developed various workarounds to obtain desir
 % \textit{``I look up like [the word] `upset,' and then I get disappointed because the pictures are not what I want. So then I keep thinking about it, and I become, I get more and more precise, like `upset man staring out the window beings. And then usually, I really start thinking of movies or things I've seen at that point that kind of give me that vibe. And then I think about that, or about games I played and what vibe they have. When pictures [of real] faces [from Google search] let me down, I look up [works from] actual artists.''} - P8
 % \end{quote}
 Many artists also manually changed reference images, using Photoshop to combine different objects in their planned art (P5, P13); P9 combined real-life references with certain artistic styles (P12). Others directly edited and interacted with a single reference  --- P7 developed an app to blur certain details in reference photos, but expressed a desire for more complex tooling: \textit{``it would be really cool if a system could take in a picture and just \textbf{get the main essence of the of the scene, and get rid of all the unnecessary details}''} (P7).
-%P6 makes their own reference photos by taking photos of their hands when they could not find a desired perspective or pose.
-% reference that was from the perspective and pose they were imagining.  
-% Lastly, some artists described having to scroll through all of their saved references, whether they were from search engine results or photos they took themselves. 
 Lastly, participants described the manual experience of scrolling through their references (e.g., search engine results, own photos) -- while some enjoyed revisiting all their reference images (P9), others found manual browsing of their reference library to be time-consuming (P9).   
 
 
-% \todo{paul - seems very long quotes do we need all of them?} 
-\subsubsection{Visualizing Combinations of References.}
+
+\subsubsection{Visualizing Combinations of References.} \label{visualize}
 Another challenge participants faced was combining multiple references into a coherent image, describing difficulties with translating photographs, styles, or poses into a unified artistic vision. For example, P5 explained the challenges of combining reference images with existing tools like Adobe Photoshop:
 \begin{quote}
     \textit{``[I] was using different images and combining them all together. It takes time to Photoshop \dots I can just take those images separately and paint or draw them as draw them together, even though they're separate. [However] I think it would be easier to combine them but again, it's just too much work.''} - P5
@@ -198,7 +196,7 @@ Artists often struggled with identifying errors or areas for improvement on thei
 Several participants expressed a desire for feedback that is \textbf{context-aware, flexible, and intentional}. For many, feedback is most valuable when it comes from someone with technical expertise or an “artist’s eye”, who offer objective critique on aspects like balance, composition, or technique. P8 often sought input from her boyfriend, an art major with formal training, while P4 appreciated informal encouragement and more serious critique in group art settings. These artists found immense value in outside perspectives, especially when they had become too focused and needed fresh eyes to spot issues or opportunities. The desire for feedback also extended to compliments, encouragement, and casual observations from peers, especially in group settings or informal art gatherings. P4 explained that sometimes even disagreements with others were helpful: \textit{``you might not initially be in alignment with somebody. They might tell you something [about your art]. You're like, `okay, I could see that.' [You] try that and you [realize] `oh, actually, I love it''} (P4). Together, these accounts illustrate the importance of feedback on technical accuracy, motivation and perspective-taking, highlighting the multifaceted role of outside input in sustaining creative practice.
 
 
-Participants imagined tools that could replicate the sensitivity of an ‘\textit{artist’s eye}’, offering feedback that was \textbf{flexible, contextualized, and tailored to their intentions}. For example, P11 wanted a tool that could help encourage and motivate them: \textit{``[When] I want to give up, the tool is like, `no, you can do it''} feeling that such a tool would \textit{``be so fun. It'd be so cute, too. I feel like people would like that''} (P11). \todo{can add more ideas for this from the validation sessions} Overall, in imagining these tools, participants emphasized the need for both constructive and uplifting feedback, surfacing opportunities for tools that provide the sharpness of an artist’s eye or support with reassurances.
+Participants imagined tools that could replicate the sensitivity of an ‘\textit{artist’s eye}’, offering feedback that was \textbf{flexible, contextualized, and tailored to their intentions}. For example, P11 wanted a tool that could help encourage and motivate them: \textit{``[When] I want to give up, the tool is like, `no, you can do it''} feeling that such a tool would \textit{``be so fun. It'd be so cute, too. I feel like people would like that''} (P11). Overall, in imagining these tools, participants emphasized the need for both constructive and uplifting feedback, surfacing opportunities for tools that provide the sharpness of an artist’s eye or support with reassurances.
 
 
 
@@ -213,7 +211,7 @@ P7 described an ideal tool they would use:
 \begin{quote}
     \textit{``ideally you have this tool that's watching over you while you paint, or while you are making art. It learns to provide you feedback at the right moment so that you're not being handheld the whole way, but, at the same time, you're not like getting lost. At the same time it figures out what [you're] good at, what you still need to spend some timeimproving on.''} - P7
 \end{quote}
-\todo{opportunity here to add more data from validation sessions}
+% \todo{opportunity here to add more data from validation sessions}
 Such opportunities highlight a desire for resources that are not only instructive but also responsive to an artist’s goals and intentions.
 
 
