--- a/tables/demographics.tex
+++ b/tables/demographics.tex
@@ -24,30 +24,56 @@
 % \label{tab:interview-demographics}
 % \jh{maybe we should add row-by-row participant table to illustrate experiences}
 % \end{table}
-
-
-\begin{table}[t]
-\small
-\setlength{\tabcolsep}{4pt}
-\renewcommand{\arraystretch}{1.15}
+\begin{table}
 \centering
-\begin{tabularx}{\linewidth}{
-  >{\centering\arraybackslash}p{0.9cm}   % ID
-  >{\centering\arraybackslash}p{0.9cm}   % Gender
-  >{\centering\arraybackslash}p{1.0cm}   % Age
-  >{\centering\arraybackslash}p{2.2 cm}   % Years making art
-  >{\raggedright\arraybackslash}p{2.0cm} % Physical media
-  >{\raggedright\arraybackslash}p{2.0cm} % Digital media
-  >{\raggedright\arraybackslash}p{1.8cm} % Digital tools
-  X                                      % AI tools (flex)
-  >{\raggedright\arraybackslash}p{3.2cm} % Reference tools
-}
+\small
+\setlength{\tabcolsep}{3pt}
+\begin{tabular}{@{}c p{3.0cm} p{2.5cm} p{2cm} p{5.0cm}@{}}
 \toprule
-\textbf{ID} & \textbf{Gender} & \textbf{Age} & \textbf{Years Making Art} & \textbf{Physical Media} & \textbf{Digital Media} & \textbf{Digital Tools} & \textbf{AI Tools} & \textbf{Ref Tools} \\
+ID & Physical mediums & Digital mediums & AI tools used & Reference sources \\
 \midrule
-P1  &  &  &  &  &  &  &  &  \\
-P2  &  &  &  &  &  &  &  &  \\
+P1 & Watercolor, Charcoal, Oil Painting & Animation & None & Google Image Search, Pinterest, Taking my own photos \\
+P2 & None & Digital drawing painting & NA & Google Image Search, Taking my own photos \\
+P3 & Watercolor & None & None & Google Image Search, Pinterest, Artist Reference Websites (e.g., ArtStation), Unsplash, Taking my own photos \\
+P4 & None & None & None & Google Image Search, Pinterest, Taking my own photos \\
+P5 & None & Digital drawing painting & None & Instagram \\
+P6 & Pencil, Ink, Paint & Digital drawing painting & Midjourney & NA \\
+P7 & Ink, Watercolor & Digital drawing painting & ChatGPT, DALL E, Other, Gemini & Taking my own photos \\
+P8 & Pencil, Acrylic Paint, Other & Digital drawing painting, Digital art ipad & None & Tiktok \\
+P9 & Pencil, Ink, Oil Paint & None & None & Instagram \\
+P10 & Pencil, Ink, Watercolor & Digital drawing painting & None & NA \\
+P11 & Pencil, Ink, Acrylic Paint, Pens & Digital drawing painting & None & ArtStation \\
+P12 & Pencil, Acrylic Paint, Pastels, Watercolor, Chalk & Digital drawing painting & ChatGPT, DALL E, Midjourney, Stable Diffusion & Google Image Search, Pinterest, Taking my own photos \\
+P13 & Pencil, Acrylic Paint, Pastels, gouache or acrylic gouache, embroidery, knitting & Digital drawing and painting & None &  Google Image Search\\
 \bottomrule
-\end{tabularx}
-\caption{Participant profiles}
+\end{tabular}
+\caption{Phase 1 participant backgrounds}
 \end{table}
+
+
+\begin{table}
+\centering
+\small
+\setlength{\tabcolsep}{3pt}
+\begin{tabular}{@{}c p{3.2cm} p{3.2cm} p{2.5cm} p{5cm}@{}}
+\toprule
+ID & Physical media & Digital media & AI tools & Reference tools \\
+\midrule
+W1 & None & Digital drawing painting & NA & Google Image Search, Taking my own photos \\
+W2 & Digital drawing painting & Adobe Photoshop, Adobe Illustrator, Other &  None & Pinterest, Artist Reference Websites (e.g., ArtStation), Taking my own photos \\
+W3 & None & Digital drawing painting &  None & Instagram \\
+W4 & Pencil, Ink, Acrylic Paint, Pens & Digital drawing painting &  None & ArtStation \\
+W5 & Pencil, Ink, Watercolor & Digital drawing painting &  None & NA \\
+W6 &  & None &  None & Google Image Search, Pinterest, Taking my own photos \\
+W7 & Pencil, Acrylic Paint, Pastels, gouache/acrylic gouache, embroidery, knitting &  &  None & Google Image Search \\
+W8 & Pencil, Ink, Paint & Digital drawing painting & Midjourney & NA \\
+W9 & Pencil, Acrylic Paint, Other & Digital drawing painting &  None & Tiktok \\
+W10 & Digital painting, Digital illustration & Procreate &  None & Google Image Search, Pinterest \\
+W11 & pencil drawing 15 years, acrylic painting 10 years, watercolor painting 7 years; digital drawing 4 years & Pencil, Ink, Acrylic Paint, Watercolor & ChatGPT, Stable Diffusion & Google Image Search, Pinterest, Taking my own photos \\
+W12 & Pencil, Ink & Digital painting & ChatGPT, DALL E, Midjourney, Stable Diffusion, Gemini, Claude & Google Image Search, Pinterest, Artist Reference Websites (e.g., ArtStation), Taking my own photos \\
+W13 & Digital Art 6 years, pencil drawing 8 years, acrylic painting 3 years & Pencil, Acrylic Paint &  None & Google Image Search, Pinterest, Artist Reference Websites (e.g., ArtStation), Taking my own photos \\
+\bottomrule
+\end{tabular}
+\caption{Participant backgrounds for media, AI usage, and references}
+\end{table}
+
